# docs/swagger.yaml
@@ -471,14 +471,30 @@ definitions:
         type: string
       updated_by:
         type: string
+      user_company:
+        items:
+          $ref: '#/definitions/models.UserCompany'
+        type: array
+      user_customer:
+        items:
+          $ref: '#/definitions/models.UserCustomer'
+        type: array
       user_id:
         type: string
+      user_office:
+        items:
+          $ref: '#/definitions/models.UserOffice'
+        type: array
       usergroup_id:
         type: string
     type: object
   models.UserCompany:
     properties:
       company_code:
+        type: string
+      company_id:
+        type: string
+      company_name:
         type: string
       created_at:
         type: string
@@ -503,10 +519,22 @@ definitions:
         type: string
       created_by:
         type: string
+      customer_address:
+        type: string
       customer_code:
+        type: string
+      customer_id:
+        type: string
+      customer_latitude:
+        type: string
+      customer_longitude:
+        type: string
+      customer_name:
         type: string
       employee_nik:
         type: string
+      max_radius:
+        type: integer
       object_code:
         type: string
       timezone_set:
@@ -553,9 +581,23 @@ definitions:
         type: string
       employee_nik:
         type: string
+      max_radius:
+        type: integer
       object_code:
         type: string
+      office_address:
+        type: string
       office_code:
+        type: string
+      office_id:
+        type: string
+      office_latitude:
+        type: string
+      office_longitude:
+        type: string
+      office_name:
+        type: string
+      office_phone:
         type: string
       timezone_set:
         type: string
